# ansible-gizmos

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  ansible.cfg  inventory.yaml  pyproject.toml  requirements.yaml  site-k8s-database-create.yaml  site-k8s-database-dump.yaml  site-k8s-database-restore.yaml  site-k8s-volume-replicator.yaml
.github/workflows/: lint.yaml
roles/k8s_database_create/defaults/: main.yaml
roles/k8s_database_create/tasks/: create-db.yaml  main.yaml
roles/k8s_database_dump/defaults/: main.yaml
roles/k8s_database_dump/tasks/: check-pg-dump.yaml  dump-database.yaml  main.yaml  to-s3.yaml
roles/k8s_database_restore/defaults/: main.yaml
roles/k8s_database_restore/tasks/: check-pg-restore.yaml  from-s3.yaml  main.yaml  restore-database.yaml
roles/k8s_kubectl/defaults/: main.yaml
roles/k8s_kubectl/tasks/: _check-kubeconfig.yaml  _check-kubectl.yaml  kill.yaml  port-forward.yaml
roles/k8s_volume_replicator/defaults/: main.yaml
roles/k8s_volume_replicator/tasks/: main.yaml
roles/k8s_volume_replicator/templates/: job-volume-replicator.yaml.j2  pvc-destination.yaml.j2
roles/k8s_volume_replicator/vars/: main.yaml
site-parameter-files/: dump-restore-dev-as-db.yaml  dump-restore-eks-as-db.yaml  dump-restore-prod-as-db.yaml  dump-restore-prod-dm-db.yaml  dump-restore-test-as-db.yaml  local-k8s-database-create.yaml  move-dev-dm-db.yaml  move-dev-im-db.yaml  move-eks-dm-db.yaml  move-eks-sd-kc-db.yaml  move-prod-dm-db.yaml  move-test-dm-db.yaml
