[tool.poetry]
name = "ansible-gizmos"
version = "0.1.0"
description = "Ansible playbooks/roles that don't fit anywhere else"
authors = ["Alan Christie <achristie@informaticsmatters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
ansible = "8.3.0"
psycopg2 = "2.9.6"
kubernetes = "26.1.0"
# For the Ansible AWS collection...
boto3 = ">= 1.18.0"
botocore = ">= 1.21.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = "5.*"
pre-commit = "3.3.*"
yamllint = "1.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
